--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cryptowatcher"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["hosseind88 <hosseind88@mail.ru>"]
 edition = "2018"
 description = "A cryptocurrency price tracker written in Rust."
@@ -16,7 +16,7 @@ threadpool = "1.8.1"
 failure = { version = "0.1.8", features = [] }
 url = "1.7.2"
 reqwest = {version = "0.10.8", features = ["blocking", "json"]}
-serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
+serde_json = { version = "1.0", features = ["alloc"] }
 serde = "1.0.118"
 prettytable-rs = "^0.8"
 
