--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cryptowatcher"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["hosseind88 <hosseind88@mail.ru>"]
 edition = "2018"
 description = "A cryptocurrency price tracker written in Rust."
@@ -17,7 +17,7 @@ failure = { version = "0.1.8", features = [] }
 url = "1.7.2"
 reqwest = {version = "0.10.8", features = ["blocking", "json"]}
 serde_json = { version = "1.0", features = ["alloc"] }
-serde = "1.0.118"
+serde = { version = "1.0", features = ["derive"] }
 prettytable-rs = "^0.8"
 
 [dev-dependencies]
